--- a/ella-hub-frontend/package.json
+++ b/ella-hub-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "ella-hub-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "module",\n  "packageManager": "npm@10.8.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
