--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ella-hub-frontend",
   "version": "1.0.0",
-  "private": true,
+  "private": true,\n  "packageManager": "npm@10.8.1",
   "scripts": {
     "dev": "cd ella-hub-frontend && npm run dev",
     "build": "cd ella-hub-frontend && npm run build",
