--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd ella-hub-frontend && npm install && npm run build",
+  "installCommand": "cd ella-hub-frontend && npm install",
+  "buildCommand": "cd ella-hub-frontend && npm run build",
   "outputDirectory": "ella-hub-frontend/dist",
-  "installCommand": "echo 'Skipping root install'",
   "framework": null
 }
