fix: Adicionar --force ao npm install no vercel.json para resolver conflito de dependência

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "cd ella-hub-frontend && npm install",
+  "installCommand": "cd ella-hub-frontend && npm install --force",
   "buildCommand": "cd ella-hub-frontend && npm run build",
   "outputDirectory": "ella-hub-frontend/dist",
   "framework": null
