fix: Adicionar rewrites no vercel.json para suportar roteamento SPA do React

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "installCommand": "cd ella-hub-frontend && npm install --force",
   "buildCommand": "cd ella-hub-frontend && npm run build",
   "outputDirectory": "ella-hub-frontend/dist",
-  "framework": null
+  "framework": null,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
